--- a/assets/main.css
+++ b/assets/main.css
@@ -47,7 +47,7 @@ body {
     bottom: 1rem;
     opacity: 0.9;
     height: 1rem;
-    display: none;
+/*    display: none;*/
 }
 
 .carousel-caption p span {
