favicon + link to edit page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,7 @@
                 {% if site.show_last_updated %}
                 Last updated: {{ site.time | date: site.last_updated_format }}
                 {% endif %}
+                Edit the content of this page <a href="https://github.com/reacts-workshop/{{site.baseurl | escape}}/blob/main/{{page.path | escape}}">here</a>.
             </div>
         </footer>
     </div>
