--- a/assets/main.css
+++ b/assets/main.css
@@ -2,6 +2,10 @@ body {
     font-family: "Fira Sans", Arial, sans-serif !important;
 }
 
+.img-fluid {
+    min-height: 100%;
+}
+
 .container {
     padding: 0;
 }
@@ -51,7 +55,7 @@ body {
 }
 
 .carousel-caption p span {
-    font-size: 0.75rem;
+    font-size: 0.60rem;
     text-shadow: 2px 2px 5px #000;
     background-color: rgba(0, 0, 0, 0.5); /* black with opacity */
 }
