updated layout to include invited speakers in home

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
         <!--slide show-->
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 
-            <div id="conference-carousel" class="carousel slide" data-ride="carousel">
+            <div id="conference-carousel" class="carousel slide" data-ride="carousel" data-interval="30000">
 
                 <div class="carousel-inner" role="listbox">
                     {% for slide in site.data.conference.slideshow %}
