--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,6 +27,8 @@ layout: page
         <!-- ---- -->
         <!-- important dates -->
         {% include card-important-dates.html %}
+        <!-- invited speakers -->
+        {% include card-invited-speakers.html %}
         <!-- ---------------- -->
     </div>
 </div>
